@@ -541,6 +541,7 @@ void TextSurface::raw_draw(Surface& dst_surface,
     const Point& dst_position) {
 
   if (surface != nullptr) {
+    surface->set_blend_mode(get_blend_mode());
     surface->raw_draw(dst_surface, dst_position + text_position);
   }
 }
@@ -555,6 +556,7 @@ void TextSurface::raw_draw_region(const Rectangle& region,
     Surface& dst_surface, const Point& dst_position) {
 
   if (surface != nullptr) {
+    surface->set_blend_mode(get_blend_mode());
     surface->raw_draw_region(
         region, dst_surface,
         dst_position + text_position);
