@@ -50,6 +50,8 @@ void LuaContext::register_surface_module() {
       { "set_pixels", surface_api_set_pixels },
       { "draw", drawable_api_draw },
       { "draw_region", drawable_api_draw_region },
+      { "get_blend_mode", drawable_api_get_blend_mode },
+      { "set_blend_mode", drawable_api_set_blend_mode },
       { "fade_in", drawable_api_fade_in },
       { "fade_out", drawable_api_fade_out },
       { "get_xy", drawable_api_get_xy },
