@@ -84,6 +84,8 @@ void LuaContext::register_text_surface_module() {
       { "get_size", text_surface_api_get_size },
       { "draw", drawable_api_draw },
       { "draw_region", drawable_api_draw_region },
+      { "get_blend_mode", drawable_api_get_blend_mode },
+      { "set_blend_mode", drawable_api_set_blend_mode },
       { "fade_in", drawable_api_fade_in },
       { "fade_out", drawable_api_fade_out },
       { "get_xy", drawable_api_get_xy },
